--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.jpa.show-sql=true
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
 
+#Spring security
+spring.security.user.name
+spring.security.user.password
+
 
